--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "types": "index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf lib && babel src -d lib"
+    "build": "rimraf lib && babel src -d lib"
   },
   "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
-    "@babel/preset-env": "^7.4.3"
+    "@babel/preset-env": "^7.4.3",
+    "electron": "^19.0.6",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "electron": ">=2.0.9"
