--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "eiphop",
+  "name": "eipfork",
   "version": "1.0.13",
-  "description": "An opinionated wrapper for electron ipc communications.",
+  "description": "Wrapper around ipc to provide async communication",
   "repository": "git@github.com:krimlabs/eiphop.git",
   "author": "Shivek Khurana <khuranashivek@outlook.com>",
-  "main": "lib/index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf lib && babel src -d lib"
+    "prebuild": "rimraf dist",
+    "build": "rollup --config rollup.config.js"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
-    "@babel/preset-env": "^7.4.3",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "electron": "^19.0.6",
     "rimraf": "^3.0.2",
+    "rollup": "^2.75.7",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
