--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@v3
       - name: Install dependencies
         run: npm ci
+      - name: Build
+        run: npm run build
       - name: Publish to NPM
         run: npm publish
         env:
