--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,13 +1,15 @@
-name: PR workflow
+name: Publish package to NPM
 
 on:
-  pull_request:
+  push:
+    paths:
+      - 'src/**'
     branches:
       - master
 
 jobs:
-  publish:
-    name: Build and publish snapshot
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Get Yarn cache path
@@ -28,21 +30,22 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build
         run: yarn build
+      - name: Setup git user
+        run: |
+          git config user.name "TheAsda"
+          git config user.email "omega-faworit@yandex.ru"
       - name: Publish to NPM
         run: |
-          yarn changeset version --snapshot pr
-          yarn changeset publish --tag pr
+          yarn changeset version
+          yarn changeset publish --tag latest
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
       - name: Get released version
         id: version
         run: echo ::set-output name=version::$(node -p "require('./package.json').version")
-      - name: Create comment
-        uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          header: ":package: Package published"
-          message: |
-            #### Package published version of package of this pull request
-
-            You can install this version via `eipfork@${{ steps.version.outputs.version }}`
-        
+      - name: Commit, tag and push changelog
+        run: |
+          git add CHANGELOG.md
+          git commit -m "Release v${{ steps.version.outputs.version }}"
+          git tag v${{ steps.version.outputs.version }}
+          git push --tags
