--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -34,6 +34,8 @@ jobs:
           yarn changeset publish --tag pr
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+          NPM_TOKEN: ${{ secrets.npm_token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Get released version
         id: version
         run: echo ::set-output name=version::$(node -p "require('./package.json').version")
