--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,14 +34,17 @@ jobs:
         run: |
           git config user.name "TheAsda"
           git config user.email "omega-faworit@yandex.ru"
+      - name: Configure npm
+        run: |
+          cat << EOF > "$HOME/.npmrc"
+            //registry.npmjs.org/:_authToken=$NPM_TOKEN
+          EOF
+        env:
+          NPM_TOKEN: ${{ secrets.npm_token }}
       - name: Publish to NPM
         run: |
-          yarn changeset version
-          yarn changeset publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-          NPM_TOKEN: ${{ secrets.npm_token }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          yarn changeset version --snapshot pr
+          yarn changeset publish --tag pr
       - name: Get released version
         id: version
         run: echo ::set-output name=version::$(node -p "require('./package.json').version")
