--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "eipfork",
   "version": "0.0.0",
   "description": "Wrapper around ipc to provide async communication",
-  "repository": "git@github.com:krimlabs/eiphop.git",
-  "author": "Shivek Khurana <khuranashivek@outlook.com>",
+  "repository": "git@github.com:theasda/eipfork.git",
+  "author": "Andrey Kiselev",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -24,6 +24,12 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "electron": ">=2.0.9"
-  }
+    "electron": ">=2"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "dist"
+  ]
 }
