--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,6 +45,8 @@ jobs:
         run: |
           yarn changeset version --snapshot pr
           yarn changeset publish --tag pr
+        env:
+          CI: true
       - name: Get released version
         id: version
         run: echo ::set-output name=version::$(node -p "require('./package.json').version")
