build: add package json committing on release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -53,6 +53,7 @@ jobs:
       - name: Commit, tag and push changelog
         run: |
           git add CHANGELOG.md
+          git add package.json
           git commit -m "Release v${{ steps.version.outputs.version }}"
           git tag v${{ steps.version.outputs.version }}
           git push --tags
